--- a/package.json
+++ b/package.json
@@ -12,13 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.1",
+    "@angular/cdk": "^10.2.1",
     "@angular/common": "~10.1.1",
     "@angular/compiler": "~10.1.1",
     "@angular/core": "~10.1.1",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.1",
+    "@angular/material": "^10.2.1",
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
+    "@fortawesome/fontawesome-free": "~5.6.3",
+    "@types/chart.js": "^2.7.40",
+    "angular-bootstrap-md": "^9.4.0",
+    "angularx-social-login": "^3.2.2",
+    "animate.css": "~3.7.2",
+    "chart.js": "^2.7.2",
+    "hammerjs": "~2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
